# remix-vite-tauri

./: .gitignore  .prettierignore  Cargo.toml  bun.lockb  env.d.ts  eslint.config.js  package.json  postcss.config.cjs  tsconfig.json  uno.config.ts  vite.config.ts
app/: root.tsx  uno.postcss
app/components/: broken-on-the-server.client.tsx
app/routes/: _index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
